--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,13 @@ repositories {
 }
 
 dependencies {
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.session:spring-session-data-redis'
+
 //    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
+    // OAuth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
     //Querydsl 추가
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
