--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,64 @@
 spring:
+  session:
+    store-type: redis
+    timeout: 1800s  # ✅ 세션 자체의 TTL (예: 30분)
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      timeout: 5000ms  # ✅ Redis 연결 타임아웃
+    web:
+      pageable:
+        default-page-size: 10
+        max-page-size: 50
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 30928436558-19oibfolu64vg7426jvoaajgjf2pcdj6.apps.googleusercontent.com
+            client-secret: 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
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            scope:
+              - email
+              - profile
+          naver:
+            client-id: VzAqaraWMceZqNQWQpIK
+            client-secret: pYIPzSPxq9
+            redirect-uri: "{baseUrl}/login/oauth2/code/naver"
+            authorization-grant-type: authorization_code
+            scope:
+              - name
+              - email
+            client-name: Naver
+          kakao:
+            client-id: 9926f34f7be4a90bcdb37d01fb29fda0
+            #            client-secret: [??? Client Secret] # ?? ? ?? ?? ??? ??
+            client-authentication-method: client_secret_post
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            scope:
+              - account_email
+            client-name: Kakao
+        provider:
+          google:
+            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
+            token-uri: https://oauth2.googleapis.com/token
+            user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
+            user-name-attribute: sub
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
   datasource:
     url: jdbc:h2:tcp://localhost/~/joblog
-#    url: jdbc:h2:mem:joblog;DB_CLOSE_DELAY=-1
+    #    url: jdbc:h2:mem:joblog;DB_CLOSE_DELAY=-1
     driver-class-name: org.h2.Driver
     username: sa
     password:
@@ -16,12 +73,6 @@ spring:
     console:
       enabled: true
       path: /h2-console
-  data:
-    web:
-      pageable:
-        default-page-size: 10
-        max-page-size: 50
-
 logging.level:
   org.hibernate:
     SQL: debug
