--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -57,26 +57,21 @@ spring:
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
   datasource:
-    url: jdbc:h2:tcp://localhost/~/joblog
-    #    url: jdbc:h2:mem:joblog;DB_CLOSE_DELAY=-1
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-#      url: jdbc:mysql://localhost:3306/joblog?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
-#      username: joblog
-#      password: joblog1234
-#      driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://joblog-mysql:3306/joblog?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+    username: joblog
+    password: joblog1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
 logging.level:
   org.hibernate:
     SQL: debug
