--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -1,12 +1,12 @@
 spring:
+  session:
+    store-type: redis
+    timeout: 1800s  # ✅ 세션 자체의 TTL (예: 30분)
   data:
     redis:
       host: localhost
       port: 6379
       timeout: 5000ms  # ✅ Redis 연결 타임아웃
-  session:
-    store-type: redis     # 세션 저장소를 Redis로 지정
-    timeout: 1800s        # (선택) 세션 만료 시간 설정
     web:
       pageable:
         default-page-size: 10
