build.gradle update

--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,14 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+tasks.withType(Test).configureEach {
+    testLogging {
+        events "passed", "skipped", "failed"
+        showStandardStreams = true
+        exceptionFormat "full"
+    }
+}
+
 //JAR 이름 고정
 bootJar {
     archiveFileName = 'app.jar'
