--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,8 +48,11 @@ services:
     restart: always
 
   joblog-jenkins:
-    image: jenkins/jenkins:lts-jdk17
+    build:
+      context: .
+      dockerfile: jenkins-docker.Dockerfile
     container_name: joblog-jenkins
+    image: jenkins/jenkins:lts-jdk17
     ports:
       - "9090:8080"          # Jenkins 접근 포트 (localhost:9090)
     volumes:
