--- a/.env.docker
+++ b/.env.docker
@@ -1,3 +1,6 @@
+#PROFILE
+SPRING_PROFILES_ACTIVE=docker
+
 # DB
 MYSQL_URL=jdbc:mysql://joblog-mysql:3306/joblog?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 MYSQL_DRIVER=com.mysql.cj.jdbc.Driver
@@ -5,7 +8,6 @@ MYSQL_DATABASE=joblog
 MYSQL_USER=joblog
 MYSQL_PASSWORD=joblog1234
 MYSQL_ROOT_PASSWORD=root1234
-
 
 # OAUTH2
 GOOGLE_ID=30928436558-19oibfolu64vg7426jvoaajgjf2pcdj6.apps.googleusercontent.com
