--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-
+    networks:
+      - joblog
   joblog-mysql:
     image: mysql:8.0
     container_name: joblog-mysql
@@ -29,7 +30,8 @@ services:
       timeout: 5s
       retries: 5
     restart: always
-
+    networks:
+      - joblog
   joblog-app:
     build:
       context: .
@@ -46,7 +48,8 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
     restart: always
-
+    networks:
+      - joblog
   joblog-jenkins:
     build:
       context: .
@@ -62,7 +65,11 @@ services:
     user: root   # 권한 이슈 방지
     environment:
       - JAVA_OPTS=-Duser.timezone=Asia/Seoul
-
+    networks:
+      - joblog
 volumes:
   mysql-data:
   jenkins-data:
+networks:
+  joblog:
+    driver: bridge
