--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,9 @@
+# .env.docker
+COMPOSE_PROJECT_NAME=joblog
+
+#PROFILE
+SPRING_PROFILES_ACTIVE=docker
+
 # DB
 DB_URL=jdbc:h2:tcp://localhost/~/joblog
 DB_DRIVER=org.h2.Driver
