--- a/infra/jenkins/docker-compose.yml
+++ b/infra/jenkins/docker-compose.yml
@@ -6,14 +6,9 @@ services:
     container_name: joblog-jenkins
 #    image: jenkins/jenkins:lts-jdk17
     ports:
-      - "9090:8080"     # Jenkins 웹
+      - "8080:8080"     # Jenkins 웹
       - "50000:50000"   # 에이전트용
     volumes:
-      - jenkins-data:/var/jenkins_home  # Jenkins 설정 유지
+      - ~/jenkins/jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock  # Docker 컨트롤 권한 부여
     restart: unless-stopped
-    environment:
-      - JAVA_OPTS=-Duser.timezone=Asia/Seoul
-
-volumes:
-  jenkins-data:
