--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,7 @@ services:
       retries: 5
     restart: always
   joblog-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: jyl9311/joblog
     container_name: joblog-app
     depends_on:
       joblog-mysql:
@@ -40,7 +38,6 @@ services:
         condition: service_healthy
     ports:
       - "8080:8080"
-    env_file: .env.dev
     environment:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
     restart: always
