--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  servlet:
+    multipart:
+      location:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:local}
   session:
@@ -54,7 +57,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+#    show-sql: true
     properties:
       hibernate:
         format_sql: true
@@ -63,18 +66,18 @@ spring:
       enabled: true
       path: /h2-console
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: joblog-kafka:9092
     consumer:
-      group-id: notification-consumer
+      group-id: joblog-notification-consumer
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
-logging.level:
-  org.hibernate:
-    SQL: debug
+#logging.level:
+#  org.hibernate:
+#    SQL: debug
 jwt:
   secret: my-super-secret-key-that-is-long-enough-to-work
 file:
